--- a/MSR/MSR-6-Unix-Users.jrxml
+++ b/MSR/MSR-6-Unix-Users.jrxml
@@ -263,7 +263,7 @@
 				<anchorNameExpression><![CDATA[$V{x.y+1.1.UnixAccountsExisting}]]></anchorNameExpression>
 			</textField>
 			<componentElement>
-				<reportElement x="0" y="21" width="483" height="40" uuid="3ac198c2-2e9c-402b-8e1d-1956b1ffe6af">
+				<reportElement x="0" y="21" width="483" height="35" uuid="3ac198c2-2e9c-402b-8e1d-1956b1ffe6af">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
@@ -281,17 +281,19 @@
 					</datasetRun>
 					<jr:column width="30" uuid="5734beb4-dcda-4437-bfc8-c983abf9e3c1">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne1"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
+							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="30" height="20" uuid="45d15e1d-b83c-4c30-aa92-9d8ca1b16e61"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="30" height="18" uuid="45d15e1d-b83c-4c30-aa92-9d8ca1b16e61"/>
 								<textElement textAlignment="Center"/>
 								<text><![CDATA[#]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
+							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="30" height="20" uuid="fa00d7b4-4ecf-49a9-81f3-cb608142f47e">
+								<reportElement style="Table-Detail-line" x="0" y="0" width="30" height="17" uuid="fa00d7b4-4ecf-49a9-81f3-cb608142f47e">
 									<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Right">
@@ -303,48 +305,48 @@
 					</jr:column>
 					<jr:column width="140" uuid="2b3c8ab9-75e3-4319-8778-e2bd8481d9fd">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne2"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="140" height="20" uuid="3fa00f1b-b25a-48d3-8f7b-c0e4d3d82c92"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="140" height="18" uuid="3fa00f1b-b25a-48d3-8f7b-c0e4d3d82c92"/>
 								<text><![CDATA[Name]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="20" uuid="94797a5b-ed63-4ce4-a227-d749088c0ce7"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="17" uuid="94797a5b-ed63-4ce4-a227-d749088c0ce7"/>
 								<textFieldExpression><![CDATA[$F{user_name}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="100" uuid="1c014c31-1c65-4e0b-b137-d7b749ef4acd">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne3"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="100" height="20" uuid="31255486-3edb-4ad5-aa75-0229706a3837"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="100" height="18" uuid="31255486-3edb-4ad5-aa75-0229706a3837"/>
 								<text><![CDATA[User Id]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="20" uuid="f02aee32-612f-4f53-868b-8e3cd08b2417"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="17" uuid="f02aee32-612f-4f53-868b-8e3cd08b2417"/>
 								<textFieldExpression><![CDATA[$F{user_id}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="213" uuid="a56b40ea-173d-47cf-8de9-c036e0948cf2">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne4"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="213" height="20" uuid="52e97522-f45b-427b-91c4-80489290e771"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="213" height="18" uuid="52e97522-f45b-427b-91c4-80489290e771"/>
 								<text><![CDATA[Unit]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="20" uuid="d604c6db-80b7-4c1b-860f-f0a8c7dab5fc"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="17" uuid="d604c6db-80b7-4c1b-860f-f0a8c7dab5fc"/>
 								<textFieldExpression><![CDATA[$F{unit}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
@@ -363,7 +365,7 @@
 				<anchorNameExpression><![CDATA[$V{x.y+1.2.UnixAccountsCreated}]]></anchorNameExpression>
 			</textField>
 			<componentElement>
-				<reportElement x="0" y="21" width="483" height="40" uuid="8653e131-e847-4e81-bd9c-958158fd90d8">
+				<reportElement x="0" y="21" width="483" height="35" uuid="8653e131-e847-4e81-bd9c-958158fd90d8">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
@@ -381,17 +383,19 @@
 					</datasetRun>
 					<jr:column width="30" uuid="a2ec8ef7-9b54-4725-b604-3c9d5dafc466">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne1"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
+							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="30" height="20" uuid="81482e07-9411-4b2c-bb30-a6b01891fdf6"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="30" height="18" uuid="81482e07-9411-4b2c-bb30-a6b01891fdf6"/>
 								<textElement textAlignment="Center"/>
 								<text><![CDATA[#]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
+							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="30" height="20" uuid="1e56cfc2-993e-4e56-bc32-f29cd62e6b7c">
+								<reportElement style="Table-Detail-line" x="0" y="0" width="30" height="17" uuid="1e56cfc2-993e-4e56-bc32-f29cd62e6b7c">
 									<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Right">
@@ -403,48 +407,48 @@
 					</jr:column>
 					<jr:column width="140" uuid="5a9e605c-e09b-4f15-898f-3e7d4a0b1ac4">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne2"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="140" height="20" uuid="16e06879-ae5c-4dfc-890c-0bb713f00f66"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="140" height="18" uuid="16e06879-ae5c-4dfc-890c-0bb713f00f66"/>
 								<text><![CDATA[Name]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="20" uuid="7f87dc2f-d959-4ee1-96ba-e71118e995bd"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="17" uuid="7f87dc2f-d959-4ee1-96ba-e71118e995bd"/>
 								<textFieldExpression><![CDATA[$F{user_name}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="100" uuid="5955ec14-fdda-4a50-b99f-010e863ef690">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne3"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="100" height="20" uuid="b2582a93-4364-4fcb-89c0-73db41010f9d"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="100" height="18" uuid="b2582a93-4364-4fcb-89c0-73db41010f9d"/>
 								<text><![CDATA[User Id]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="20" uuid="16d563dc-fe11-483d-8555-ab7725df99b0"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="17" uuid="16d563dc-fe11-483d-8555-ab7725df99b0"/>
 								<textFieldExpression><![CDATA[$F{user_id}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="213" uuid="3e8c648a-2f78-444a-b455-9058ae2cc8eb">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne4"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="213" height="20" uuid="b52182fa-885c-414d-8020-157b4f417c54"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="213" height="18" uuid="b52182fa-885c-414d-8020-157b4f417c54"/>
 								<text><![CDATA[Unit]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="20" uuid="46ec6657-83bc-4d69-922a-63cba2b23abf"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="17" uuid="46ec6657-83bc-4d69-922a-63cba2b23abf"/>
 								<textFieldExpression><![CDATA[$F{unit}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
@@ -463,7 +467,7 @@
 				<anchorNameExpression><![CDATA[$V{x.y+1.3.UnixAccountsDeleted}]]></anchorNameExpression>
 			</textField>
 			<componentElement>
-				<reportElement x="0" y="21" width="483" height="40" uuid="9666fc53-226b-439c-9802-6b7e475003d6">
+				<reportElement x="0" y="21" width="483" height="35" uuid="9666fc53-226b-439c-9802-6b7e475003d6">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
@@ -481,17 +485,19 @@
 					</datasetRun>
 					<jr:column width="30" uuid="cbccbde1-bd4d-4f36-a8ac-b6761f8b1eff">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne1"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
+							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="30" height="20" uuid="a5d77e66-3c14-49b7-8441-a5088ad1f175"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="30" height="18" uuid="a5d77e66-3c14-49b7-8441-a5088ad1f175"/>
 								<textElement textAlignment="Center"/>
 								<text><![CDATA[#]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
+							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="30" height="20" uuid="7e4e5b8c-4754-4fb9-855f-b0027ee392bd">
+								<reportElement style="Table-Detail-line" x="0" y="0" width="30" height="17" uuid="7e4e5b8c-4754-4fb9-855f-b0027ee392bd">
 									<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Right">
@@ -503,48 +509,48 @@
 					</jr:column>
 					<jr:column width="140" uuid="866b62fb-e6da-4070-959b-08f028b7b9b1">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne2"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="140" height="20" uuid="62e6df02-2595-42c7-b0b8-ff9237ff26bc"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="140" height="18" uuid="62e6df02-2595-42c7-b0b8-ff9237ff26bc"/>
 								<text><![CDATA[Name]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="20" uuid="049fb81b-fc62-474a-9254-851098e9b091"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="17" uuid="049fb81b-fc62-474a-9254-851098e9b091"/>
 								<textFieldExpression><![CDATA[$F{user_name}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="100" uuid="54cd6a91-2a87-4bcb-a613-586a52ba95ab">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne3"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="100" height="20" uuid="7c9f16af-dfe3-4aa2-916a-518d0ae218f9"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="100" height="18" uuid="7c9f16af-dfe3-4aa2-916a-518d0ae218f9"/>
 								<text><![CDATA[User Id]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="20" uuid="3af539d6-2348-439c-a621-fb64c6e83138"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="17" uuid="3af539d6-2348-439c-a621-fb64c6e83138"/>
 								<textFieldExpression><![CDATA[$F{user_id}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="213" uuid="597d4005-6e93-4932-9743-b58d64f6264b">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne4"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="213" height="20" uuid="a47da5cf-bc78-42a8-b7a1-c02d88c03e48"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="213" height="18" uuid="a47da5cf-bc78-42a8-b7a1-c02d88c03e48"/>
 								<text><![CDATA[Unit]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="20" uuid="9e170d90-1a5c-4ee2-ac92-9b5c0723431f"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="17" uuid="9e170d90-1a5c-4ee2-ac92-9b5c0723431f"/>
 								<textFieldExpression><![CDATA[$F{unit}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
