--- a/MSR/MSR-6.2-DBA-Users.jrxml
+++ b/MSR/MSR-6.2-DBA-Users.jrxml
@@ -245,7 +245,7 @@
 				<anchorNameExpression><![CDATA[$V{x.y+1.1.DbaAccountsExisting}]]></anchorNameExpression>
 			</textField>
 			<componentElement>
-				<reportElement x="0" y="20" width="482" height="40" uuid="36bafae5-72ac-4b81-9fb9-8cfd42b0cca0">
+				<reportElement x="0" y="20" width="482" height="35" uuid="36bafae5-72ac-4b81-9fb9-8cfd42b0cca0">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
@@ -263,17 +263,19 @@
 					</datasetRun>
 					<jr:column width="30" uuid="0385e101-aa14-4f91-b70d-47318827185b">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne1"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
+							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="30" height="20" uuid="5c8ef358-e6ce-4169-8c04-868adacfb781"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="30" height="18" uuid="5c8ef358-e6ce-4169-8c04-868adacfb781"/>
 								<textElement textAlignment="Center"/>
 								<text><![CDATA[#]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
+							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="30" height="20" uuid="7f9300e3-01ae-48a2-9bda-57d1f3277726">
+								<reportElement style="Table-Detail-line" x="0" y="0" width="30" height="17" uuid="7f9300e3-01ae-48a2-9bda-57d1f3277726">
 									<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Right">
@@ -285,48 +287,48 @@
 					</jr:column>
 					<jr:column width="140" uuid="0382b6dc-2f8f-44ae-9b19-ddfd6699d33d">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne2"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="140" height="20" uuid="8166b27e-6a1d-43a7-84c3-2784d39e9fc6"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="140" height="18" uuid="8166b27e-6a1d-43a7-84c3-2784d39e9fc6"/>
 								<text><![CDATA[Name]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="20" uuid="63084106-5c23-4a85-88b4-5433fd58cfae"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="17" uuid="63084106-5c23-4a85-88b4-5433fd58cfae"/>
 								<textFieldExpression><![CDATA[$F{user_name}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="100" uuid="a5adc3a2-a8ff-4cd9-8242-613424c2157f">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne3"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="100" height="20" uuid="668a263b-2ac3-499b-bd04-cb94ccd60ec9"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="100" height="18" uuid="668a263b-2ac3-499b-bd04-cb94ccd60ec9"/>
 								<text><![CDATA[User Id]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="20" uuid="22a210cb-c543-432a-a2d5-6f24181d2e08"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="17" uuid="22a210cb-c543-432a-a2d5-6f24181d2e08"/>
 								<textFieldExpression><![CDATA[$F{user_id}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="213" uuid="bc0273aa-e304-4df5-90b3-fda480ba14ba">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne4"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="213" height="20" uuid="92efe157-315c-4d73-b3f9-61607fe14f28"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="213" height="18" uuid="92efe157-315c-4d73-b3f9-61607fe14f28"/>
 								<text><![CDATA[Unit]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="20" uuid="6bf2e69f-aa9d-460f-95a3-9a584e32d97c"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="17" uuid="6bf2e69f-aa9d-460f-95a3-9a584e32d97c"/>
 								<textFieldExpression><![CDATA[$F{unit}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
@@ -345,7 +347,7 @@
 				<anchorNameExpression><![CDATA[$V{x.y+1.2.DbaAccountsCreated}]]></anchorNameExpression>
 			</textField>
 			<componentElement>
-				<reportElement x="0" y="20" width="483" height="40" uuid="45185837-1304-4a1e-8481-face56fe5606">
+				<reportElement x="0" y="20" width="483" height="35" uuid="45185837-1304-4a1e-8481-face56fe5606">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
@@ -363,17 +365,19 @@
 					</datasetRun>
 					<jr:column width="30" uuid="7cfc0f4a-9f86-4964-ac4b-b91304ebf4f9">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne1"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
+							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="30" height="20" uuid="8904850a-0a76-47f9-b9ce-64ff10729619"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="30" height="18" uuid="8904850a-0a76-47f9-b9ce-64ff10729619"/>
 								<textElement textAlignment="Center"/>
 								<text><![CDATA[#]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
+							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="30" height="20" uuid="020878c1-5ab6-4156-8f48-5659868c8841">
+								<reportElement style="Table-Detail-line" x="0" y="0" width="30" height="17" uuid="020878c1-5ab6-4156-8f48-5659868c8841">
 									<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Right">
@@ -385,48 +389,48 @@
 					</jr:column>
 					<jr:column width="140" uuid="cc92f85a-661c-4df5-a7a3-6badb002bc02">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne2"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="140" height="20" uuid="553cb191-651f-43a0-8004-2173d5cd1997"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="140" height="18" uuid="553cb191-651f-43a0-8004-2173d5cd1997"/>
 								<text><![CDATA[Name]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="20" uuid="184b2715-4ea7-45a9-b727-18382d5051a4"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="17" uuid="184b2715-4ea7-45a9-b727-18382d5051a4"/>
 								<textFieldExpression><![CDATA[$F{user_name}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="100" uuid="6939e740-dc49-4971-9ec1-107d8e5c1eae">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne3"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="100" height="20" uuid="e72aa5c7-ba77-4b65-b15a-88cb73f7b077"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="100" height="18" uuid="e72aa5c7-ba77-4b65-b15a-88cb73f7b077"/>
 								<text><![CDATA[User Id]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="20" uuid="dc0f07ee-e289-4ba4-96d9-56ef6be80765"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="17" uuid="dc0f07ee-e289-4ba4-96d9-56ef6be80765"/>
 								<textFieldExpression><![CDATA[$F{user_id}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="213" uuid="b34b2e07-4317-47bf-b754-f486bbe6bf67">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne4"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="213" height="20" uuid="118c2f1e-acac-4781-b7fd-dcf1c148f6f9"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="213" height="18" uuid="118c2f1e-acac-4781-b7fd-dcf1c148f6f9"/>
 								<text><![CDATA[Unit]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="20" uuid="0cf4239b-4a10-42c6-a274-dcb2eba27dd6"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="17" uuid="0cf4239b-4a10-42c6-a274-dcb2eba27dd6"/>
 								<textFieldExpression><![CDATA[$F{unit}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
@@ -445,7 +449,7 @@
 				<anchorNameExpression><![CDATA[$V{x.y+1.3.DbaAccountsDeleted}]]></anchorNameExpression>
 			</textField>
 			<componentElement>
-				<reportElement x="0" y="20" width="483" height="40" uuid="99fc2bbd-2fb7-4229-824d-027ff23272f9">
+				<reportElement x="0" y="20" width="483" height="35" uuid="99fc2bbd-2fb7-4229-824d-027ff23272f9">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
@@ -463,17 +467,18 @@
 					</datasetRun>
 					<jr:column width="30" uuid="bef740bd-9161-4a95-8b9d-76df9f9487dd">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne1"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
+							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="30" height="20" uuid="033c3ab4-8de3-46e5-8316-3244e50a36e0"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="30" height="18" uuid="033c3ab4-8de3-46e5-8316-3244e50a36e0"/>
 								<textElement textAlignment="Center"/>
 								<text><![CDATA[#]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="30" height="20" uuid="ed4ab6d0-2d08-46df-8b1f-fffacaf77337">
+								<reportElement style="Table-Detail-line" x="0" y="0" width="30" height="17" uuid="ed4ab6d0-2d08-46df-8b1f-fffacaf77337">
 									<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Right">
@@ -485,48 +490,48 @@
 					</jr:column>
 					<jr:column width="140" uuid="4c81b27a-18fe-4fde-bec6-5ccc06c9a878">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne2"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="140" height="20" uuid="83a01105-04b2-4a15-9154-38e62be86ea6"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="140" height="18" uuid="83a01105-04b2-4a15-9154-38e62be86ea6"/>
 								<text><![CDATA[Name]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="20" uuid="89bc4db9-e8b7-412e-8703-a8c4f9e6d9a2"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="17" uuid="89bc4db9-e8b7-412e-8703-a8c4f9e6d9a2"/>
 								<textFieldExpression><![CDATA[$F{user_name}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="100" uuid="3ea33419-a3e5-4421-a1e1-0f8ec2dda2db">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne3"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="100" height="20" uuid="f6105fa5-c645-457b-a02a-a9ebac39904e"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="100" height="18" uuid="f6105fa5-c645-457b-a02a-a9ebac39904e"/>
 								<text><![CDATA[User Id]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="20" uuid="f383b728-26cd-403e-9375-b7ad7a1d1d01"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="17" uuid="f383b728-26cd-403e-9375-b7ad7a1d1d01"/>
 								<textFieldExpression><![CDATA[$F{user_id}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="213" uuid="2d4fc475-3672-4959-9132-d2533566cc1c">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Colonne4"/>
-						<jr:columnHeader style="Table_CH" height="20">
+						<jr:columnHeader style="Table_CH" height="18">
 							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="213" height="20" uuid="4b658f53-dac9-4f54-a480-955a52c49c46"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="213" height="18" uuid="4b658f53-dac9-4f54-a480-955a52c49c46"/>
 								<text><![CDATA[Unit]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="20">
+						<jr:detailCell style="Table_TD" height="17">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="20" uuid="74aa7c09-3302-47ce-82af-5a83496a38b5"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="17" uuid="74aa7c09-3302-47ce-82af-5a83496a38b5"/>
 								<textFieldExpression><![CDATA[$F{unit}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
